syntax = "proto3";
package OmniFlix.marketplace.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/OmniFlix/marketplace/x/marketplace/types";
option (gogoproto.goproto_getters_all) = false;



message Params {
  string                   sale_commission              = 1 [
    (gogoproto.moretags)   = "yaml:\"sale_commission\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  Distribution             distribution                 = 2 [(gogoproto.nullable) = false];
  google.protobuf.Duration bid_close_duration   = 3 [
    (gogoproto.moretags)   = "yaml:\"bid_close_duration\"",
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];
}

message Distribution {
  string staking        = 1 [
    (gogoproto.moretags)   = "yaml:\"staking\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  string community_pool = 2 [
    (gogoproto.moretags)   = "yaml:\"community_pool\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}